--- a/first-element/index.html
+++ b/first-element/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     <script src="https://app.kontent.ai/js-api/custom-element/v1/custom-element.min.js"></script>
-    <scrit src="./src/index.js"></scrit>
+    <script src="./src/index.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css"
